# ya-rand

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  test.yml  test_nightly.yml  test_stable.yml
examples/: bench.rs  comp.rs  compare.rs  compare_secure.rs  comparison.rs  comparisons.rs  monte_carlo.rs  sampling.rs
src/: encoding.rs  lib.rs  par_iter.rs  rng.rs  romuquad.rs  romutrio.rs  secure.rs  util.rs  xoroshiro128pp.rs  xoshiro256pp.rs  xoshiro512pp.rs
src/secure/: avx2.rs  avx512.rs  mod.rs  neon.rs  soft.rs  sse.rs  sse2.rs  util.rs
