[package]
name = "ya-rand"
version = "0.3.2"
edition = "2021"
description = "A crate for simple and fast random number generation"
documentation = "https://docs.rs/ya-rand/latest/ya_rand/"
repository = "https://github.com/silverstillisntgold/ya-rand"
categories = ["algorithms", "no-std"]
keywords = ["chacha", "rand", "random", "rng", "xoshiro"]
license = "MIT"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["std"]
alloc = []
inline = []
std = ["alloc", "getrandom/std"]

[dependencies]
cfg-if = "1"
getrandom = "0.3"

[dev-dependencies]
fastrand = "2.3"
oorandom = "11.1"
rand = "0.9"
rayon = "1.10"

[dev-dependencies.chacha20]
default-features = false
features = ["rng"]
version = "=0.10.0-pre.3"
