[package]
name = "ya-rand"
version = "2.0.2"
edition = "2024"
description = "A crate for simple and fast random number generation"
documentation = "https://docs.rs/ya-rand"
repository = "https://github.com/silverstillisntgold/ya-rand"
categories = ["algorithms", "no-std"]
keywords = ["chacha", "rand", "random", "rng", "xoshiro"]
license = "MIT"
rust-version = "1.89"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["secure", "std"]
alloc = []
inline = []
secure = ["chachacha"]
std = ["alloc", "getrandom/std"]

[dependencies]
chachacha = { version = "0.4", optional = true }
getrandom = "0.3"

[dev-dependencies]
chacha20 = { version = "=0.10.0-rc.0", default-features = false, features = [
    "rng",
] }
fastrand = "2.3"
oorandom = "11.1"
rand = "0.9"
rayon = "1.11"
